Submit btn alignment fixed

--- a/ui.frontend/src/main/webpack/etisalat/styles/wst-form.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/wst-form.scss
@@ -462,7 +462,7 @@
      
       & ~ label {
         left: 0;
-        font-size: $font16;
+        font-size: $font20;
       }
     }
     
@@ -775,7 +775,7 @@
     top: 100%;
     left: 0;
     opacity: 0;
-    font-size: $font16;
+    font-size: $font20;
     -webkit-transition: 0.2s opacity ease-out, 0.2s color ease-out;
     transition: 0.2s opacity ease-out, 0.2s color ease-out;
   }
@@ -787,7 +787,7 @@
     top: 100%;
     left: 0;
     opacity: 0;
-    font-size: $font16;
+    font-size: $font20;
     -webkit-transition: 0.2s opacity ease-out, 0.2s color ease-out;
     transition: 0.2s opacity ease-out, 0.2s color ease-out;
   }
@@ -806,7 +806,7 @@
       & label {
         transform: translateY(-10px) scale(0.8);
         transform-origin: 0 0;
-        font-size: $font16;
+        font-size: $font20;
         z-index: 2;
         top: -.5rem;
         line-height: toRem(2);
@@ -954,7 +954,7 @@
     margin-top: 0.2rem;
    
     @include respond-to-min($desktop) {
-      font-size: $font16;
+      font-size: $font20;
       }
     
   }
@@ -1182,7 +1182,7 @@
         transform: translateY(-10px) scale(0.8);
         -webkit-transform-origin: 0 0;
         transform-origin: 0 0;
-        font-size: $font16;
+        font-size: $font20;
         z-index: 2;
       }
     }
@@ -1196,7 +1196,7 @@
         color: $almost-black;
         transform: translateY(-10px) scale(0.8);
         transform-origin: 0 0;
-        font-size: $font16;
+        font-size: $font20;
         z-index: 2;
       }
     }
